mandiriPersonalLabs/mandiri-personal-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-09-07T22:17:51Z"
  generation: 1
  labels:
    app: mandiri-personal-web-app
  name: mandiri-personal-web
  namespace: default
  resourceVersion: "12816"
  selfLink: /apis/apps/v1/namespaces/default/deployments/mandiri-personal-web
  uid: 54aabff3-d1bd-11e9-b7df-42010a800111
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mandiri-personal-web-app
      tier: webapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mandiri-personal-web-app
        tier: webapp
    spec:
      containers:
      - image: gcr.io/mandiriproject/mandiri-personal-web
        imagePullPolicy: Always
        name: mandiri-personal-web
        ports:
        - containerPort: 8080
          name: http-server
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2019-09-07T22:18:14Z"
    lastUpdateTime: "2019-09-07T22:18:14Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2019-09-07T22:17:51Z"
    lastUpdateTime: "2019-09-07T22:18:14Z"
    message: ReplicaSet "mandiri-personal-web-5c55568668" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
